# idevgames.com

./: .gitignore  Cargo.toml  LICENSE  README.md  brunch-config.js  clean.sh  config.toml  deploy.sh  diesel.toml  dotenv  package-lock.json  package.json  publish.sh  watch.sh  wsl.sh
app/: app.scss  initialize.js
cargo-project/: Cargo.toml
cargo-project/src/: application_context.rs  db.rs  github_client.rs  icons.rs  main.rs  schema.rs
cargo-project/src/cli/: migrate.rs  permission.rs  serve.rs  snippet.rs
cargo-project/src/controllers/: auth.rs  homepage.rs  mod.rs  snippets.rs
cargo-project/src/helpers/: admin_only.rs  maybe_user.rs  mod.rs  snippets.rs
cargo-project/src/models/: github_user_records.rs  mod.rs  permissions.rs  snippets.rs
content/: index.md
content/links/: 2020-02-14-blender-2-82.md  2020-02-24-gdc-failing-to-fail-the-spiderweb-way.md  2020-02-28-swift-arg-parser.md  2020-03-02-war-stories-crash-bandicoot.md  2020-03-05-harvest-moon-retro.md  2020-03-05-verdant-skies-retro.md  2020-04-15-parallelizing-naughty-dog-engine-using-fibers.md  2020-04-22-writing-an-efficient-vulkan-renderer.md  2020-05-22-retro-arcade-racing-game.md  (+2 more)
react-project/: package-lock.json  package.json
sass/: site.scss
src/: application_context.rs  db.rs  github_client.rs  icons.rs  main.rs  schema.rs
templates/: base.html  control_plane.html.tera  homepage.html.tera  index.html  layout.html.tera  login.html.tera  logout.html.tera  macros.html.tera  section.html  snippet.html.tera  snippet_deleted.html.tera  snippet_form.html.tera  snippetlist.html.tera
(+50 files in other folders)
