[package]
name = "idevgames"
version = "0.2.0"
authors = ["Christopher R. Miller <xpm@mysteriouspants.com>"]
edition = "2018"
publish = false # let's not foist this onto crates.io as a crate

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.2"
diesel = { version = "1.4", features = [ "chrono", "sqlite", "r2d2" ] }
diesel_migrations = "1.4"
dotenv = "0.15"
env_logger = "0.8"
log = "0.4"
parking_lot = "0.11"
pulldown-cmark = "0.8"
reqwest = { version = "0.11", features = [ "json" ] }
rocket = { version = "0.5.0-rc.1", features = [ "secrets", "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
thiserror = "1.0"
